# spaghetti-rs

./: Cargo.toml  database.sql  seed.sql
migrations/: 20250107081308_init.sql
src/: cli.rs  config.rs  error.rs  extractor.rs  lib.rs  main.rs  pasta.rs
